# serenity

Base/etc/: WindowServer.ini
Base/home/anon/.config/: SystemServer.ini
Base/res/apps/: TaskbarSettings.af
Userland/Applications/TaskbarSettings/: CMakeLists.txt  TaskbarSettings.gml  TaskbarSettingsWidget.cpp  TaskbarSettingsWidget.h  main.cpp
Userland/Libraries/LibGUI/: Event.h
Userland/Services/Taskbar/: TaskbarWindow.cpp  TaskbarWindow.h
Userland/Services/WindowServer/: ConnectionFromClient.cpp  ConnectionFromClient.h  WindowClient.ipc  WindowManager.cpp  WindowManager.h  WindowManagerClient.ipc  WindowManagerServer.ipc  WindowServer.ipc
